--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,15 +7,17 @@
                 <h2 class="text-center"><img src="https://bootdey.com/img/Content/avatar/avatar7.png" class="img-circle"><br>Login</h2>
             </div>
             <div class="modal-body">
-                <form class="form col-md-12 center-block">
+                <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm.value)" class="form col-md-12 center-block">
                     <div class="form-group">
-                        <input type="text" class="form-control input-lg" placeholder="Username" name="username">
+                        <input ngModel #usernameInput="ngModel" type="text" class="form-control input-lg" placeholder="Username" name="username" >
                     </div>
+                    <span style="color: red" *ngIf="usernameInput.invalid && usernameInput.touched" >Por favor, digite seu nome de usuario</span>
                     <div class="form-group">
-                        <input type="password" class="form-control input-lg" placeholder="Password" name="password">
+                        <input ngModel #passwordInput="ngModel" type="password" class="form-control input-lg" placeholder="Password" name="password">
                     </div>
+                    <span style="color: red" *ngIf="passwordInput.invalid && passwordInput.touched" >Por favor, informe sua senha</span>
                     <div class="form-group">
-                        <button class="btn btn-primary btn-lg btn-block">Sign In</button>
+                        <button type="submit" [disabled]="loginForm.invalid || showLoading" class="btn btn-primary btn-lg btn-block">Sign In</button>
                         <span class="pull-right"><a href="#">Register</a></span><span><a href="#">Need help?</a></span>
                     </div>
                 </form>
