--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,8 +17,8 @@
                     </div>
                     <span style="color: red" *ngIf="passwordInput.invalid && passwordInput.touched" >Por favor, informe sua senha</span>
                     <div class="form-group">
-                        <button type="submit" [disabled]="loginForm.invalid || showLoading" class="btn btn-primary btn-lg btn-block">Sign In</button>
-                        <span class="pull-right"><a href="#">Register</a></span><span><a href="#">Need help?</a></span>
+                        <button type="submit" [disabled]="loginForm.invalid || showLoading" class="btn btn-primary btn-lg btn-block">Entrar</button>
+                        <span class="pull-right"><a routerLink="/register">Cadastrar-se</a></span><span><a href="#">Ajuda</a></span>
                     </div>
                 </form>
             </div>
